3rd commit, full project

--- a/app/src/main/res/layout/game_screen.xml
+++ b/app/src/main/res/layout/game_screen.xml
@@ -63,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
+                android:layout_marginRight="50dp"
                 android:shadowColor="#2eaed9"
                 android:shadowDx="4"
                 android:shadowDy="4"
@@ -74,7 +75,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:background="@color/activity_background"
+            android:background="#2eaed9"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
